--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_easyloading: ^3.0.5
   google_fonts: ^6.2.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
